cheap modify in Result

--- a/4_Results.tex
+++ b/4_Results.tex
@@ -1,6 +1,6 @@
 \newpage
 \clearpage
-\section{Results and Outlook}
+\section{Results and Discussion}
     This is the $p_T$ spectrum of the yield for $\omega$ and $\phi$. Since the cross section has not been calculated for the vertical axis yet, a comparison with other experimental results cannot be made. However, a distribution with an exponential dependence on $p_T$ can be observed.
     \begin{figure}[htbp]
         \centering
