modify the sentence in Result

--- a/4_Results.tex
+++ b/4_Results.tex
@@ -1,7 +1,7 @@
 \newpage
 \clearpage
 \section{Results and Discussion}
-    This is the $p_T$ spectrum of the yield for $\omega$ and $\phi$. Since the cross section has not been calculated for the vertical axis yet, a comparison with other experimental results cannot be made. However, a distribution with an exponential dependence on $p_T$ can be observed.
+In this chapter, the graphs of the $\omega$ and $\phi$ yields calculated in \ref{Analysis:Dimuon:Yield:Results} are presented as the conclusion.
     \begin{figure}[htbp]
         \centering
         % Left side figure
@@ -20,10 +20,11 @@
             \label{fig:phi_yield}
         \end{minipage}
     \end{figure}
-    Since no corrections have been applied, a physical discussion cannot. however, a decreasing trend with increasing transverse momentum can be observed.  
-    In this analysis, the results were obtained using the most standard cuts applied to muon tracks reconstructed with the tracking quality of the 2024. Additionally, the peak extraction for \( \omega \rightarrow \mu\mu \) and \( \phi \rightarrow \mu\mu \) was performed using a simple Gaussian function. Therefore, the yield calculation for \( \omega \) and \( \phi \) provides only a rough estimate. Further improvements in precision can be expected through enhancements in the single muon tracking quality and the use of fit functions that better represent the actual mass distribution.  
-    Moreover, it is important to note that the \( \rho \rightarrow \mu\mu \) distribution is located near the \( \omega \rightarrow \mu\mu \) mass distribution. The \( \rho \) meson has a mean mass of \( m = 775.26 \) MeV and a full width of \( \Gamma = 149.1 \) MeV, meaning that it forms a broader distribution near the \( \omega \) peak. In this analysis, due to the broad distribution of \( \rho \) and the use of a simple fit function, the extraction of the \( \omega \) peak may have included contributions from \( \rho \) as well. 
-    Looking ahead, improvements in the resolution of single muon kinematic variables are expected to enhance the mass resolution, leading to a sharper \( \omega \) peak. This would allow for better separation of the \( \rho \) and \( \omega \) peaks.
+    Figures \ref{fig:omega_yield} and \ref{fig:phi_yield} show the transverse momentum spectra of the production yields of $\omega$ and $\phi$. The horizontal axis represents the transverse momentum of $\omega$ and $\phi$, while the vertical axis represents the number of counts.  
+    Since these spectra are uncorrected, no physical discussion can be made. However, it is observed that the yields decrease as the transverse momentum increases. This behavior is similar to the $p_T$ spectrum of $\phi$ production cross-sections measured using forward dimuons in Run 2. Although the $p_T$ spectrum of $\omega$ production cross-sections has not been published, the present results exhibit a similar trend to those measured in Run 2.  
+    Here, it is necessary to consider the contribution of $\rho \rightarrow \mu\mu$. The $\rho$ meson has a mean mass of $m = 775.26$ MeV and a full width of $\Gamma = 149.1$ MeV, leading to a broader distribution than $\omega$, which is located at a very similar mass position. Given that the signal extraction method used in this analysis accounts for the broad width of the $\rho$, it is considered that the peak structure of $\omega$ is not significantly affected.  
+    As a future prospect, improving the resolution of single-muon kinematic variables will enhance the mass resolution, making the $\omega$ peak sharper and allowing better separation between the $\rho$ and $\omega$ peaks. Additionally, by applying acceptance-efficiency corrections using the forward detector system for $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ dimuon reconstruction, the integrated luminosity can be determined from the event counts. This will enable the calculation of production cross-sections from the present results, allowing for direct comparison with Run 2 results.
+
 
     Discuss single muon track reconstruction, \ref{matching improvements}, and future prospects as well. In the current muon track reconstruction algorithm, the pseudorapidity (\(\eta\)) and azimuthal angle (\(\phi\)) of the muon are determined using the MFT standalone track to improve their precision. However, the DCA is calculated using parameters obtained from the global fit of the MFT-MCH-MID track. Since using tracks closer to the collision point allows for more precise measurements unaffected by the absorber, it is expected that the accuracy of the DCA measurement can be improved by using the parameters of the MFT track that constitutes the MFT-MCH-MID track.Furthermore, improvements in MFT-MCH matching are also needed. As seen in \ref{purity_of_pt}, the matching purity significantly decreases at low transverse momentum (\( p_T \)). This degradation occurs because low-\( p_T \) muons undergo multiple scattering and energy loss in the absorber, making MFT-MCH matching more challenging. However, this study demonstrated that applying a \( \Delta \eta \) cut improves matching purity in the low-\( p_T \) region. This result suggests that continued analysis can further enhance matching purity.
 
