modify the sentence in Result

--- a/4_Results.tex
+++ b/4_Results.tex
@@ -30,4 +30,4 @@ In this chapter, the graphs of the $\omega$ and $\phi$ yields calculated in \ref
 
     The ultimate goal is to measure the changes in the mass distribution of light vector mesons in lead-lead collision events. This study has revealed several remaining challenges, including issues with matching purity at low transverse momentum and the development of the track reconstruction algorithm. Additionally, improving the quality of muon tracks in high-multiplicity events in heavy-ion collisions is another challenge. As a first step, efforts will be focused on improving matching purity and developing the track reconstruction algorithm in proton-proton collisions, where the event multiplicity is relatively low. Subsequently, similar improvements will be pursued in heavy-ion collisions. Ultimately, the aim is to clarify the changes in the mass distribution of light vector mesons due to QGP formation and observe the restoration of chiral symmetry.
 \section{Summary}
-    In this study, we analyzed forward muon pairs in ALICE from $\sqrt{s} = 13.6$ TeV $pp$ collisions. The peaks corresponding to $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ in the dimuon mass distribution were extracted by fitting them with Gaussian functions, while other components were fitted with an exponential function. These analyses were performed for each transverse momentum range, and the transverse momentum spectra of $\omega$ and $\phi$ yields were presented. Additionally, an analysis was conducted to improve the matching purity between the MFT, introduced in Run 3, and the downstream detectors. By applying a cut on the difference in $\eta$ between the MFT Track and the MCH Track that constitute the Global Track, we demonstrated the ability to remove Fake Match tracks. Furthermore, the optimal MFT-MCH matching $\chi^2$ cut was determined using the signal yields of $\omega$ and $\phi$. As a future prospect, further improvements in the quality of Single Muon Tracks will be pursued. Ultimately, this study aims to clarify the changes in the mass distribution of light vector mesons caused by the formation of the QGP in lead-lead nuclear collisions.
+    In this study, we analyzed forward muon pairs in ALICE from $\sqrt{s} = 13.6$ TeV $pp$ collisions. The peaks corresponding to $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ in the dimuon mass distribution were extracted by fitting them with Gaussian functions, while other components were fitted with an exponential function. These analyses were performed for each transverse momentum range, and the transverse momentum spectra of $\omega$ and $\phi$ yields were presented. Additionally, an analysis was conducted to improve the matching purity between the MFT, introduced in Run 3, and the downstream detectors. By applying a cut on the difference in $\eta$ between the MFT Track and the MCH Track that constitute the Global Track, we demonstrated the ability to remove Fake Match tracks. Furthermore, the optimal MFT-MCH matching $\chi^2$ cut was determined using the signal yields of $\omega$ and $\phi$. As a future prospect, further improvements in the quality of Single Muon Tracks will be pursued. Ultimately, this study aims to c
